--- a/index.html
+++ b/index.html
@@ -2,64 +2,124 @@
 <html lang="en" >
 <head>
   <title>Internship Project</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">  
 </head>
 <body>
-<header class="header-fixed">
-	<div class="header-limiter">
-		<h1><a href="#">Basic<span>Eduventures</span></a></h1>
-		<nav>
-			<a href="#" class="selected">Home</a>
-			<a href="#">Must <span>Read</span></a>
-			<a href="#">Blog</a>
-			<a href="#">Magzine</a>
-			<a href="#">Career Workshop</a>
-			<a href="#">Faq</a>
-			<a href="#">Contact Us</a>
-		</nav>
+	<div id="app" class="container">
+    	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        	<a class="navbar-brand" href="#">Basic<span style="color:#18ffff"> Eduventures</span></a>
+        	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        	<span class="navbar-toggler-icon"></span></button>
+        			
+        	<div id="navbarNavDropdown" class="navbar-collapse collapse">
+            	<ul class="navbar-nav mr-auto">
+
+           		</ul>
+           		<ul class="navbar-nav">
+                	<li class="nav-item active">
+                		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                	</li>
+                	<li class="nav-item">
+                		<a class="nav-link" href="#">Must Read</a>
+                	</li>
+                	<li class="nav-item">
+               			<a class="nav-link" href="#">Blogs</a>
+             		</li>
+           			<li class="nav-item">
+               			<a class="nav-link" href="#">Magazine</a>
+         			</li>
+         			<li class="nav-item">
+         				<a class="nav-link" href="#">Career Workshop</a>
+         			</li>
+         			<li class="nav-item">
+         				<a class="nav-link" href="#">FAQ'S</a>
+         			</li>
+         			<li class="nav-item">
+         				<a class="nav-link">Contact Us</a>
+         			</li>
+                </ul>
+            </div>
+    	</nav>
 	</div>
-</header>
+	
 
-<!-- You need this element to prevent the content of the page from jumping up -->
-<!-- <div class="header-fixed-placeholder"></div>
- -->
-<!-- The content of your page would go here. -->
+	<!-- Carousel Starts -->
+	<div id="carousel" class="carousel slide" data-ride="carousel">
+  		<div class="carousel-inner">
+    		<div class="carousel-item active">
+      			<img class="d-block w-100" src="images/1.JPG" alt="First slide">
+    		</div>
+    		<div class="carousel-item">
+      			<img class="d-block w-100" src="images/2.JPG" alt="Second slide">
+    		</div>
+    		<div class="carousel-item">
+      			<img class="d-block w-100" src="images/3.JPG" alt="Third slide">
+    		</div>
+  		</div>
+  		<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+    		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    		<span class="sr-only">Previous</span>
+  		</a>
+  		<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+    		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+    		<span class="sr-only">Next</span>
+  		</a>
+	</div>
+	<!-- Carousel Ends -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script>
+	<!-- Services Section Starts -->
+	<div class="container">
+		<div class="section-title-area">
+			<h1 class="section-title">Our Services</h1>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="card bg-light mb-3">
+					<div class="card-header">
+						<div class="service-title">
+							<a href="#"><h3>Magazine</h3></a>
+						</div>
+					</div>
+				 	<div class="card-body">
+				 		<i class="fa fa-book fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Some random shit I'll talk to you just to increase the space for the card.</p>
+				  	</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card bg-light mb-3">
+					<div class="card-header">
+						<div class="service-title">
+							<a href="#"><h3>Career Workshop</h3></a>
+						</div>
+					</div>
+				 	<div class="card-body">
+				 		<i class="fa fa-tasks fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Some random shit I'll talk to you just to increase the space for the card.</p>
+				  	</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card bg-light mb-3">
+					<div class="card-header">
+						<div class="service-title">
+							<a href="#"><h3>Blogs</h3></a>
+						</div>
+					</div>
+				 	<div class="card-body">
+				 		<i class="fa fa-rss fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Some random shit I'll talk to you just to increase the space for the card.</p>
+				  	</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Services Section Ends -->
 
-	$(document).ready(function(){
-
-		var showHeaderAt = 150;
-
-		var win = $(window),
-				body = $('body');
-
-		// Show the fixed header only on larger screen devices
-
-		if(win.width() > 400){
-
-			// When we scroll more than 150px down, we set the
-			// "fixed" class on the body element.
-
-			win.on('scroll', function(e){
-// 
-				if(win.scrollTop() > showHeaderAt) {
-					body.addClass('fixed');
-				}
-				else {
-					body.removeClass('fixed');
-				}
-			});
-
-		}
-
-	});
-
-</script>
-
-
-  
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
