News Feed Added

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="css/style.css">  
 </head>
 <body>
 	<div id="app" class="container">
     	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        	<a class="navbar-brand" href="#">Basic<span style="color:#18ffff"> Eduventures</span></a>
+        	<a class="navbar-brand" href="#">Basic<span> Eduventures</span></a>
         	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         	<span class="navbar-toggler-icon"></span></button>
         			
@@ -72,52 +73,139 @@
 	</div>
 	<!-- Carousel Ends -->
 
-	<!-- Services Section Starts -->
-	<div class="container">
-		<div class="section-title-area">
-			<h1 class="section-title">Our Services</h1>
-		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<div class="card bg-light mb-3">
-					<div class="card-header">
-						<div class="service-title">
-							<a href="#"><h3>Magazine</h3></a>
-						</div>
-					</div>
-				 	<div class="card-body">
-				 		<i class="fa fa-book fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Some random shit I'll talk to you just to increase the space for the card.</p>
-				  	</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card bg-light mb-3">
-					<div class="card-header">
-						<div class="service-title">
-							<a href="#"><h3>Career Workshop</h3></a>
-						</div>
-					</div>
-				 	<div class="card-body">
-				 		<i class="fa fa-tasks fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Some random shit I'll talk to you just to increase the space for the card.</p>
-				  	</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card bg-light mb-3">
-					<div class="card-header">
-						<div class="service-title">
-							<a href="#"><h3>Blogs</h3></a>
-						</div>
-					</div>
-				 	<div class="card-body">
-				 		<i class="fa fa-rss fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Some random shit I'll talk to you just to increase the space for the card.</p>
-				  	</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<!-- Services Section Starts --> 
+  <div class="container">
+    <div class="jumbotron">
+      <div class="w3-container w3-center w3-animate-bottom animation">
+        <div class="section-title-area">
+          <h1 class="section-title">Our Services</h1>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card bg-light mb-3">
+              <div class="card-header">
+                <div class="service-title">
+                  <a href="#"><h3>Magazine</h3></a>
+                </div>
+              </div>
+              <div class="card-body">
+                <i class="fa fa-book fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-light mb-3">
+              <div class="card-header">
+                <div class="service-title">
+                  <a href="#"><h3>Career Workshop</h3></a>
+                </div>
+              </div>
+              <div class="card-body">
+                <i class="fa fa-tasks fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-light mb-3">
+              <div class="card-header">
+                <div class="service-title">
+                  <a href="#"><h3>Blogs</h3></a>
+                </div>
+              </div>
+              <div class="card-body">
+                <i class="fa fa-rss fa-3x" aria-hidden="true">&nbsp;</i><p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
 	<!-- Services Section Ends -->
+  <!-- News Feed Starts -->
+    <div class="container">
+      <div class="jumbotron">
+        <div class="feed-title-area">
+          <h1 class="feed-title">News Feed</h1>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <a href="#"><img src="images/jee.jpg"></a>
+          </div>
+          <div class="col-md-8 list-article-meta">
+            <a href="#" rel="category tag">category 1</a>
+            <h3>Title of the News Feed here</h3>
+            <p>The description of the news</p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary modalss" data-toggle="modal" data-target="#news_feed_1">More Info</button>
+          </div>
+          <div class="col-md-4">
+            <a href="#"><img src="images/jee.jpg"></a>
+          </div>
+          <div class="col-md-8 list-article-meta">
+            <a href="#" rel="category tag">category 2</a>
+            <h3>Title of the News Feed here</h3>
+            <p>The description of the news</p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary modalss" data-toggle="modal" data-target="#news_feed_2">More Info</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- News Feed Ends -->
 
+  <!-- Modal -->
+  <div class="modal fade" id="news_feed_1" tabindex="-1" role="dialog" aria-labelledby="news_feed_1Label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="news_feed_1Label">Title of the News</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+  <div class="modal fade" id="news_feed_2" tabindex="-1" role="dialog" aria-labelledby="news_feed_2Label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="news_feed_2Label">Title of the News</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
