--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="css/style.css">  
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div id="app" class="container">
@@ -53,13 +52,13 @@
 	<div id="carousel" class="carousel slide" data-ride="carousel">
   		<div class="carousel-inner">
     		<div class="carousel-item active">
-      			<img class="d-block w-100" src="images/1.JPG" alt="First slide">
+      			<img class="d-block w-100" src="images/4.jpg" alt="First slide">
     		</div>
     		<div class="carousel-item">
-      			<img class="d-block w-100" src="images/2.JPG" alt="Second slide">
+      			<img class="d-block w-100" src="images/5.jpg" alt="Second slide">
     		</div>
     		<div class="carousel-item">
-      			<img class="d-block w-100" src="images/3.JPG" alt="Third slide">
+      			<img class="d-block w-100" src="images/6.jpg" alt="Third slide">
     		</div>
   		</div>
   		<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -74,9 +73,8 @@
 	<!-- Carousel Ends -->
 
 	<!-- Services Section Starts --> 
-  <div class="container">
+
     <div class="jumbotron">
-      <div class="w3-container w3-center w3-animate-bottom animation">
         <div class="section-title-area">
           <h1 class="section-title">Our Services</h1>
         </div>
@@ -118,12 +116,10 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>  
+ 
 	<!-- Services Section Ends -->
+  <hr class="style18">
   <!-- News Feed Starts -->
-    <div class="container">
       <div class="jumbotron">
         <div class="feed-title-area">
           <h1 class="feed-title">News Feed</h1>
@@ -137,7 +133,7 @@
             <h3>Title of the News Feed here</h3>
             <p>The description of the news</p>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary modalss" data-toggle="modal" data-target="#news_feed_1">More Info</button>
+            <button type="button" class="btn btn-primary modal-panel" data-toggle="modal" data-target="#news_feed_1">More Info</button>
           </div>
           <div class="col-md-4">
             <a href="#"><img src="images/jee.jpg"></a>
@@ -147,12 +143,14 @@
             <h3>Title of the News Feed here</h3>
             <p>The description of the news</p>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary modalss" data-toggle="modal" data-target="#news_feed_2">More Info</button>
+            <button type="button" class="btn btn-primary modal-panel" data-toggle="modal" data-target="#news_feed_2">More Info</button>
           </div>
         </div>
+        <div class="all-feed">
+          <a href="#"><button class="btn btn-info">More</button></a>
+          <!-- <a href="#" class="btn btn-theme-primary-outline">More</a> -->
+        </div>
       </div>
-    </div>
-  <!-- News Feed Ends -->
 
   <!-- Modal -->
   <div class="modal fade" id="news_feed_1" tabindex="-1" role="dialog" aria-labelledby="news_feed_1Label" aria-hidden="true">
@@ -203,9 +201,120 @@
     </div>
   </div>
 </div>
+<hr class="style18">
+<!-- News Feed Ends -->
 
+<!-- Comments/Testimonials Starts -->
+<section>
+  <div class="container">
+    <div class="testimonial">
+      <h1>Testimonial</h1>
+    </div>
+    <!-- <div class="row">
+      <div id="carousel-2" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-2" data-slide-to="1"></li>
+          <li data-target="#carousel-2" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner-2">
+        <div class="item active">
+          <img src="images/color.jpg" style="width: 1130px; height: 300px;">
+          <div class="header-text">
+            <div class="col-md-12 text-center">
+              <h2>
+                <span>Testimonial 1</span>
+              </h2>
+              <br>
+              <h3>
+              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+              </h3>
+            </div>
+        </div>
+      </div>
+      </div>
 
+    </div>
+ -->
+  </div>
+</section>
+<hr class="style18">
+<!-- Comments/Testimonials Ends -->
+
+<!-- Support Part Starts -->
+<section>
+  <div class="section-title-area">
+    <div class="support-title">
+      <h1>Support Partner</h1>
+    </div>
+  </div>
+  <hr class="style18">
+</section>
+<!-- support Part Ends -->
+</div>
+<!-- Footer Starts -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <div class="subscribe-us">
+          <form>
+            <div class="form-group">
+              <label class="subscribe-us">Subscribe for Updates</label>
+              <span id="sub"  class="form-control">
+                <input type="email" placeholder="Enter email">
+                <input type="button" class="btn btn-primary" value="Subscribe">  
+              </span>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <section class="social-connect">
+          <span class="footer-social-overlap footer-social-connect">
+            Connect with us
+          </span>
+          <span class="footer-social-overlap">
+            <a href="https://www.facebook.com/ctcode/" title="Facebook"><i class="fa fa-facebook-official fa-2x" id="icon"></i></a>
+          </span>
+          <span class="footer-social-overlap">
+            <a href="https://www.instagram.com/_crack_the_code/" title="Instagram"><i class="fa fa-instagram fa-2x" id="icon"></i></a>
+          </span>
+          <span class="footer-social-overlap">
+            <a href="https://www.youtube.com/channel/UCt6B5e-65JOVfvrkGc9urPA" title="YouTube"><i class="fa fa-youtube fa-2x" id="icon"></i></a>
+          </span>
+        </section>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="subscribe-us">
+          <span>Basics Eduventures</span><br>
+          <span class="footer-social-overlap">
+            <a href="#" title="Maps"><i class="fa fa-location-arrow" id="icon">&emsp;Sehore, M.P.</i></a>
+          </span>
+          <span class="footer-social-overlap">
+            <i class="fa fa-phone" id="icon">&emsp;+91 8962821290</i>
+          </span>
+          <span class="footer-social-overlap">
+            <a href="mailto:basicseduventures@gmail.com" target="_top"><i class="fa fa-envelope" id="icon">&emsp;basicseduventures@gmail.com</i></a>
+            <br>
+          </span>
+        </div>
+      </div>
+      <div class="col-md-12 subscribe-us">
+        <a href="/terms-of-use.html" class="generic-anchor" rel="nofollow" id="terms-privacy">Terms</a> | <a href="/privacy-policy.html" class="generic-anchor" rel="nofollow" id="terms-privacy">Privacy</a><br>
+        <span><i class="fa fa-copyright" role="copyright">&nbsp;All Rights Reserved</i></span>
+      </div>
+    </div>
+  </div>
   
+</footer>
+<!-- Footer Ends -->
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
