--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
+<!-- <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -75,7 +78,7 @@
 	<!-- Services Section Starts --> 
 
     <div class="jumbotron">
-        <div class="section-title-area">
+      <div class="section-title-area">
           <h1 class="section-title">Our Services</h1>
         </div>
         <div class="row">
@@ -115,12 +118,14 @@
               </div>
             </div>
           </div>
+            
         </div>
+    
  
 	<!-- Services Section Ends -->
-  <hr class="style18">
+
   <!-- News Feed Starts -->
-      <div class="jumbotron">
+
         <div class="feed-title-area">
           <h1 class="feed-title">News Feed</h1>
         </div>
@@ -150,7 +155,6 @@
           <a href="#"><button class="btn btn-info">More</button></a>
           <!-- <a href="#" class="btn btn-theme-primary-outline">More</a> -->
         </div>
-      </div>
 
   <!-- Modal -->
   <div class="modal fade" id="news_feed_1" tabindex="-1" role="dialog" aria-labelledby="news_feed_1Label" aria-hidden="true">
@@ -201,7 +205,7 @@
     </div>
   </div>
 </div>
-<hr class="style18">
+
 <!-- News Feed Ends -->
 
 <!-- Comments/Testimonials Starts -->
@@ -210,49 +214,63 @@
     <div class="testimonial">
       <h1>Testimonial</h1>
     </div>
-    <!-- <div class="row">
-      <div id="carousel-2" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-2" data-slide-to="1"></li>
-          <li data-target="#carousel-2" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner-2">
-        <div class="item active">
-          <img src="images/color.jpg" style="width: 1130px; height: 300px;">
-          <div class="header-text">
-            <div class="col-md-12 text-center">
-              <h2>
-                <span>Testimonial 1</span>
-              </h2>
-              <br>
-              <h3>
-              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-              </h3>
+    <div class="container">
+    <div id="carouselContent" class="carousel slide box" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active text-center p-4 text">
+                 <p id="testimonial">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                 <label style="float: right;">Name of the Person</label>
+            </div>
+            <div class="carousel-item text-center p-4 text">
+                <p id="testimonial">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                 <label style="float: right;">Name of the Person</label>
             </div>
         </div>
-      </div>
-      </div>
-
+        <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
- -->
+  </div>
   </div>
 </section>
-<hr class="style18">
 <!-- Comments/Testimonials Ends -->
 
 <!-- Support Part Starts -->
 <section>
-  <div class="section-title-area">
+  <div class="container">
     <div class="support-title">
-      <h1>Support Partner</h1>
+      <h1>Supporting Partner</h1>
+    </div>
+    <div class="col-md-12">
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
+      <a href="#"><img src="images/sp1.png"></a>&emsp;&emsp;&emsp;
     </div>
   </div>
-  <hr class="style18">
 </section>
 <!-- support Part Ends -->
-</div>
+
 <!-- Footer Starts -->
+</div>
 <footer>
   <div class="container">
     <div class="row">
@@ -314,7 +332,6 @@
   
 </footer>
 <!-- Footer Ends -->
-
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
